Add testing , change id format and add schema for models